accelerated-domains: add goldmt.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35267,6 +35267,7 @@ server=/goldksoft.com/114.114.114.114
 server=/goldmadon.com/114.114.114.114
 server=/goldmantis.com/114.114.114.114
 server=/goldmarkrealestate.com/114.114.114.114
+server=/goldmt.net/114.114.114.114
 server=/goldstonepack.com/114.114.114.114
 server=/goldsunchn.com/114.114.114.114
 server=/goldsunmachinery.com/114.114.114.114
