--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48890,6 +48890,7 @@ server=/jdlhpt.com/114.114.114.114
 server=/jdlingyu.com/114.114.114.114
 server=/jdmk.xyz/114.114.114.114
 server=/jdmwk.com/114.114.114.114
+server=/jdmy.com/114.114.114.114
 server=/jdnews.net/114.114.114.114
 server=/jdon.com/114.114.114.114
 server=/jdpay.com/114.114.114.114
