accelerated-domains: add zoneyung.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103230,6 +103230,7 @@ server=/zoneker.com/114.114.114.114
 server=/zonemore.com/114.114.114.114
 server=/zonen-tech.com/114.114.114.114
 server=/zoneve.com/114.114.114.114
+server=/zoneyung.com/114.114.114.114
 server=/zongdegongju.com/114.114.114.114
 server=/zonghangsl.com/114.114.114.114
 server=/zonghe888.com/114.114.114.114
