accelerated-domains: add ctzb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24040,6 +24040,7 @@ server=/ctyo.com/114.114.114.114
 server=/ctyun.net/114.114.114.114
 server=/ctyun.online/114.114.114.114
 server=/ctyuncdn.net/114.114.114.114
+server=/ctzb.com/114.114.114.114
 server=/ctzcdn.com/114.114.114.114
 server=/ctzg.com/114.114.114.114
 server=/cu-air.com/114.114.114.114
