accelerated-domains: add sam-tec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73504,6 +73504,7 @@ server=/salonglong.com/114.114.114.114
 server=/salongweb.com/114.114.114.114
 server=/salutecc.asia/114.114.114.114
 server=/sam-jeong.net/114.114.114.114
+server=/sam-tec.com/114.114.114.114
 server=/samanlehua.com/114.114.114.114
 server=/same-tech.com/114.114.114.114
 server=/samebar.com/114.114.114.114
