--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19187,6 +19187,7 @@ server=/chaosw.com/114.114.114.114
 server=/chaov.com/114.114.114.114
 server=/chaowanjoy.com/114.114.114.114
 server=/chaoweb.com/114.114.114.114
+server=/chaowei-machine.com/114.114.114.114
 server=/chaoxibiao.net/114.114.114.114
 server=/chaoxin.com/114.114.114.114
 server=/chaoxing.cc/114.114.114.114
