--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71667,6 +71667,7 @@ server=/qzj2.com/114.114.114.114
 server=/qzjcd.com/114.114.114.114
 server=/qzjgxx.com/114.114.114.114
 server=/qzjhsd.com/114.114.114.114
+server=/qzjianwo.com/114.114.114.114
 server=/qzjkw.net/114.114.114.114
 server=/qzjlw.com/114.114.114.114
 server=/qzjxzs.com/114.114.114.114
