--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100252,6 +100252,7 @@ server=/zcxsl.com/114.114.114.114
 server=/zcycdn.com/114.114.114.114
 server=/zczbzx.com/114.114.114.114
 server=/zczj.com/114.114.114.114
+server=/zd-brake.com/114.114.114.114
 server=/zd-dl.com/114.114.114.114
 server=/zd-hs.com/114.114.114.114
 server=/zd-pm.com/114.114.114.114
