accelerated-domains: add zjcyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102550,6 +102550,7 @@ server=/zjctct.com/114.114.114.114
 server=/zjcuhb.com/114.114.114.114
 server=/zjcxbank.com/114.114.114.114
 server=/zjcywx.com/114.114.114.114
+server=/zjcyyy.com/114.114.114.114
 server=/zjdashi.com/114.114.114.114
 server=/zjdata.net/114.114.114.114
 server=/zjdianying.com/114.114.114.114
