--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102557,6 +102557,7 @@ server=/zjdianying.com/114.114.114.114
 server=/zjdjc.com/114.114.114.114
 server=/zjdkjs.com/114.114.114.114
 server=/zjdljc.com/114.114.114.114
+server=/zjdljt.com/114.114.114.114
 server=/zjdnajy.com/114.114.114.114
 server=/zjdtkg.com/114.114.114.114
 server=/zjdybank.com/114.114.114.114
