accelerated-domains: add zjdsgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102559,6 +102559,7 @@ server=/zjdkjs.com/114.114.114.114
 server=/zjdljc.com/114.114.114.114
 server=/zjdljt.com/114.114.114.114
 server=/zjdnajy.com/114.114.114.114
+server=/zjdsgroup.com/114.114.114.114
 server=/zjdtkg.com/114.114.114.114
 server=/zjdybank.com/114.114.114.114
 server=/zjdydlc.com/114.114.114.114
