accelerated-domains: add zjhjzy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102612,6 +102612,7 @@ server=/zjhejiang.com/114.114.114.114
 server=/zjheliang.com/114.114.114.114
 server=/zjhfxcl.com/114.114.114.114
 server=/zjhi.net/114.114.114.114
+server=/zjhjzy.com/114.114.114.114
 server=/zjhkele.com/114.114.114.114
 server=/zjhlst.com/114.114.114.114
 server=/zjhnlianzhong.com/114.114.114.114
