accelerated-domains: add zjhlgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102614,6 +102614,7 @@ server=/zjhfxcl.com/114.114.114.114
 server=/zjhi.net/114.114.114.114
 server=/zjhjzy.com/114.114.114.114
 server=/zjhkele.com/114.114.114.114
+server=/zjhlgroup.com/114.114.114.114
 server=/zjhlst.com/114.114.114.114
 server=/zjhnlianzhong.com/114.114.114.114
 server=/zjhnrb.com/114.114.114.114
