accelerated-domains: add wjs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89397,6 +89397,7 @@ server=/wjqwy.com/114.114.114.114
 server=/wjqxmy.com/114.114.114.114
 server=/wjqyw.com/114.114.114.114
 server=/wjrcb.com/114.114.114.114
+server=/wjs.com/114.114.114.114
 server=/wjshw.com/114.114.114.114
 server=/wjsldy.com/114.114.114.114
 server=/wjsms.net/114.114.114.114
