accelerated-domains: add zjcshjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102547,6 +102547,7 @@ server=/zjcnbank.com/114.114.114.114
 server=/zjcnyb.com/114.114.114.114
 server=/zjcrcgas.com/114.114.114.114
 server=/zjcrjzj.com/114.114.114.114
+server=/zjcshjt.com/114.114.114.114
 server=/zjctct.com/114.114.114.114
 server=/zjcuhb.com/114.114.114.114
 server=/zjcxbank.com/114.114.114.114
