accelerated-domains: add zjzhd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102902,6 +102902,7 @@ server=/zjzcen.com/114.114.114.114
 server=/zjzdgj.com/114.114.114.114
 server=/zjzfjs.com/114.114.114.114
 server=/zjzg.com/114.114.114.114
+server=/zjzhd.com/114.114.114.114
 server=/zjzhengding.com/114.114.114.114
 server=/zjzhengxingyiyuan.com/114.114.114.114
 server=/zjzhitan.com/114.114.114.114
