accelerated-domains: add zuoli.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103793,6 +103793,7 @@ server=/zuojing.com/114.114.114.114
 server=/zuojj.com/114.114.114.114
 server=/zuokesteak.com/114.114.114.114
 server=/zuolaiqi.com/114.114.114.114
+server=/zuoli.com/114.114.114.114
 server=/zuoqu.com/114.114.114.114
 server=/zuoqudashi.net/114.114.114.114
 server=/zuosa.com/114.114.114.114
