--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22288,6 +22288,7 @@ server=/cnjtjtss.com/114.114.114.114
 server=/cnjunhe.com/114.114.114.114
 server=/cnjunzilan.com/114.114.114.114
 server=/cnjurry.com/114.114.114.114
+server=/cnjurui.com/114.114.114.114
 server=/cnjxl.com/114.114.114.114
 server=/cnjxol.com/114.114.114.114
 server=/cnjyky.com/114.114.114.114
