--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42161,6 +42161,7 @@ server=/hjkklj.com/114.114.114.114
 server=/hjksjx.com/114.114.114.114
 server=/hjlrw.com/114.114.114.114
 server=/hjmarathon.com/114.114.114.114
+server=/hjpcc.com/114.114.114.114
 server=/hjpp.net/114.114.114.114
 server=/hjr-exchange.com/114.114.114.114
 server=/hjren.com/114.114.114.114
