accelerated-domains: add chemptc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19357,6 +19357,7 @@ server=/chemmade.com/114.114.114.114
 server=/chemnet.com/114.114.114.114
 server=/chemourscg.com/114.114.114.114
 server=/chempacific-china.com/114.114.114.114
+server=/chemptc.com/114.114.114.114
 server=/chemrc.com/114.114.114.114
 server=/chemsb.com/114.114.114.114
 server=/chemsrc.com/114.114.114.114
