--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19951,6 +19951,7 @@ server=/chinacpda.org/114.114.114.114
 server=/chinacpx.com/114.114.114.114
 server=/chinacqsb.com/114.114.114.114
 server=/chinacrane.net/114.114.114.114
+server=/chinacrankshaft.com/114.114.114.114
 server=/chinacreator.com/114.114.114.114
 server=/chinacrops.org/114.114.114.114
 server=/chinacrosspoint.com/114.114.114.114
