--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22273,6 +22273,7 @@ server=/cnjffb.com/114.114.114.114
 server=/cnjfsilk.com/114.114.114.114
 server=/cnjiali.com/114.114.114.114
 server=/cnjingchu.com/114.114.114.114
+server=/cnjingtong.com/114.114.114.114
 server=/cnjiwang.com/114.114.114.114
 server=/cnjizhe.com/114.114.114.114
 server=/cnjj.com/114.114.114.114
