--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22668,6 +22668,7 @@ server=/cnziyun.com/114.114.114.114
 server=/cnzjdd.com/114.114.114.114
 server=/cnzjj.com/114.114.114.114
 server=/cnzjol.com/114.114.114.114
+server=/cnzkzg.com/114.114.114.114
 server=/cnzlapp.com/114.114.114.114
 server=/cnzps.com/114.114.114.114
 server=/cnzskj.com/114.114.114.114
