--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53660,6 +53660,7 @@ server=/kingkaid.com/114.114.114.114
 server=/kingland119.com/114.114.114.114
 server=/kinglawv.com/114.114.114.114
 server=/kingliton.com/114.114.114.114
+server=/kinglyuan.com/114.114.114.114
 server=/kingmagic.co/114.114.114.114
 server=/kingmagnet.com/114.114.114.114
 server=/kingmb.com/114.114.114.114
