accelerated-domains: add nbocc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63467,6 +63467,7 @@ server=/nbmotive.com/114.114.114.114
 server=/nbmpzs.com/114.114.114.114
 server=/nbmyy.com/114.114.114.114
 server=/nbnnn.xyz/114.114.114.114
+server=/nbocc.com/114.114.114.114
 server=/nbpolytheatre.com/114.114.114.114
 server=/nbpyx.com/114.114.114.114
 server=/nbqixing.com/114.114.114.114
