accelerated-domains: add novo-biotech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65420,6 +65420,7 @@ server=/novelquickapp.com/114.114.114.114
 server=/novelquickapppic.com/114.114.114.114
 server=/novelsee.com/114.114.114.114
 server=/novemideas.com/114.114.114.114
+server=/novo-biotech.com/114.114.114.114
 server=/novocool.com/114.114.114.114
 server=/novocranes.com/114.114.114.114
 server=/novogene.com/114.114.114.114
