--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68131,6 +68131,7 @@ server=/pjbest.com/114.114.114.114
 server=/pjche.com/114.114.114.114
 server=/pjcn.org/114.114.114.114
 server=/pjf.name/114.114.114.114
+server=/pjgear.com/114.114.114.114
 server=/pjgjg.com/114.114.114.114
 server=/pjhome.net/114.114.114.114
 server=/pjhubs.com/114.114.114.114
