accelerated-domains: add wfdyes.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88628,6 +88628,7 @@ server=/wfdata.club/114.114.114.114
 server=/wfdj.net/114.114.114.114
 server=/wfdqzx.com/114.114.114.114
 server=/wfdsjls.com/114.114.114.114
+server=/wfdyes.com/114.114.114.114
 server=/wfeil.com/114.114.114.114
 server=/wfek.com/114.114.114.114
 server=/wff168.com/114.114.114.114
