--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102573,6 +102573,7 @@ server=/zjdkjs.com/114.114.114.114
 server=/zjdljc.com/114.114.114.114
 server=/zjdljt.com/114.114.114.114
 server=/zjdnajy.com/114.114.114.114
+server=/zjdpco.com/114.114.114.114
 server=/zjdsgroup.com/114.114.114.114
 server=/zjdtkg.com/114.114.114.114
 server=/zjdybank.com/114.114.114.114
