--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102629,6 +102629,7 @@ server=/zjhfxcl.com/114.114.114.114
 server=/zjhi.net/114.114.114.114
 server=/zjhjzy.com/114.114.114.114
 server=/zjhkele.com/114.114.114.114
+server=/zjhlcnc.com/114.114.114.114
 server=/zjhlgroup.com/114.114.114.114
 server=/zjhlst.com/114.114.114.114
 server=/zjhnlianzhong.com/114.114.114.114
