accelerated-domains: add zjzhengyao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102919,6 +102919,7 @@ server=/zjzg.com/114.114.114.114
 server=/zjzhd.com/114.114.114.114
 server=/zjzhengding.com/114.114.114.114
 server=/zjzhengxingyiyuan.com/114.114.114.114
+server=/zjzhengyao.com/114.114.114.114
 server=/zjzhitan.com/114.114.114.114
 server=/zjzhonglan.com/114.114.114.114
 server=/zjzhongtian.com/114.114.114.114
