accelerated-domains: add zjtcjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102836,6 +102836,7 @@ server=/zjt2017.com/114.114.114.114
 server=/zjtangshan.com/114.114.114.114
 server=/zjtbe.com/114.114.114.114
 server=/zjtcc.com/114.114.114.114
+server=/zjtcjt.com/114.114.114.114
 server=/zjtcn.com/114.114.114.114
 server=/zjtcpm.com/114.114.114.114
 server=/zjtdw.com/114.114.114.114
