accelerated-domains: add topsunleisure.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83461,6 +83461,7 @@ server=/topsresearch.com/114.114.114.114
 server=/topsrx.com/114.114.114.114
 server=/topstar.art/114.114.114.114
 server=/topsunholdings.com/114.114.114.114
+server=/topsunleisure.com/114.114.114.114
 server=/topsunpower.cc/114.114.114.114
 server=/topswim.net/114.114.114.114
 server=/toptastewin.com/114.114.114.114
