--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29732,6 +29732,7 @@ server=/enec.net/114.114.114.114
 server=/enelcn.com/114.114.114.114
 server=/energy-greenland.com/114.114.114.114
 server=/energy-root.com/114.114.114.114
+server=/energy-zj.com/114.114.114.114
 server=/enet16.com/114.114.114.114
 server=/enet16.net/114.114.114.114
 server=/enet360.com/114.114.114.114
