accelerated-domains: add zjxnd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102891,6 +102891,7 @@ server=/zjxinyun.com/114.114.114.114
 server=/zjxlmb.com/114.114.114.114
 server=/zjxltz.com/114.114.114.114
 server=/zjxlyp.com/114.114.114.114
+server=/zjxnd.com/114.114.114.114
 server=/zjxpp.com/114.114.114.114
 server=/zjxqyy.com/114.114.114.114
 server=/zjxsbank.com/114.114.114.114
