--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101411,6 +101411,7 @@ server=/zhijiehuanyu.com/114.114.114.114
 server=/zhijieketang.com/114.114.114.114
 server=/zhijin.com/114.114.114.114
 server=/zhijinwang.com/114.114.114.114
+server=/zhiju-steel.com/114.114.114.114
 server=/zhikaiis.com/114.114.114.114
 server=/zhikao100.com/114.114.114.114
 server=/zhikao365.net/114.114.114.114
