--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20526,6 +20526,7 @@ server=/chinayyo.com/114.114.114.114
 server=/chinaz.com/114.114.114.114
 server=/chinaz.net/114.114.114.114
 server=/chinazbd.com/114.114.114.114
+server=/chinazbj.com/114.114.114.114
 server=/chinazhaoye.com/114.114.114.114
 server=/chinazhifu.com/114.114.114.114
 server=/chinazhijiang.com/114.114.114.114
