--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21972,6 +21972,7 @@ server=/cnbanbao.com/114.114.114.114
 server=/cnbang.net/114.114.114.114
 server=/cnbaowen.net/114.114.114.114
 server=/cnbct.org/114.114.114.114
+server=/cnbeinuo.com/114.114.114.114
 server=/cnbetacdn.com/114.114.114.114
 server=/cnbidding.com/114.114.114.114
 server=/cnbiocell.com/114.114.114.114
