--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44915,6 +44915,7 @@ server=/hwjyw.com/114.114.114.114
 server=/hwlifting.com/114.114.114.114
 server=/hwlpz.com/114.114.114.114
 server=/hwocloud.com/114.114.114.114
+server=/hwoled.com/114.114.114.114
 server=/hworld.com/114.114.114.114
 server=/hwrecruit.com/114.114.114.114
 server=/hwshu.com/114.114.114.114
