accelerated-domains: add hzyapu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45597,6 +45597,7 @@ server=/hzxy888.com/114.114.114.114
 server=/hzxyns.com/114.114.114.114
 server=/hzxywlkj.com/114.114.114.114
 server=/hzyanglao.com/114.114.114.114
+server=/hzyapu.com/114.114.114.114
 server=/hzyestar.com/114.114.114.114
 server=/hzyhjg.com/114.114.114.114
 server=/hzyhzp.com/114.114.114.114
