--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75864,6 +75864,7 @@ server=/shenzhenware.com/114.114.114.114
 server=/shenzhenyuren.com/114.114.114.114
 server=/shenzhoublm.com/114.114.114.114
 server=/shenzhouen.com/114.114.114.114
+server=/shenzhoupharma.com/114.114.114.114
 server=/shepai1688.com/114.114.114.114
 server=/shephe.com/114.114.114.114
 server=/shepinw.com/114.114.114.114
