--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76505,6 +76505,7 @@ server=/shqmxx.com/114.114.114.114
 server=/shqpphschool.com/114.114.114.114
 server=/shqswlgs.com/114.114.114.114
 server=/shquantian.com/114.114.114.114
+server=/shqunlu.com/114.114.114.114
 server=/shqxjx.com/114.114.114.114
 server=/shqyg.com/114.114.114.114
 server=/shrail.com/114.114.114.114
