--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77391,6 +77391,7 @@ server=/sinopharmhospital.com/114.114.114.114
 server=/sinopharmintl.com/114.114.114.114
 server=/sinopharmzl.com/114.114.114.114
 server=/sinophex.com/114.114.114.114
+server=/sinopont.com/114.114.114.114
 server=/sinopr.org/114.114.114.114
 server=/sinoprinterparts.com/114.114.114.114
 server=/sinoqy.com/114.114.114.114
