accelerated-domains: add wenyuanenviron.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88521,6 +88521,7 @@ server=/wenyoutai.com/114.114.114.114
 server=/wenyouyun.com/114.114.114.114
 server=/wenytao.com/114.114.114.114
 server=/wenyu6.com/114.114.114.114
+server=/wenyuanenviron.com/114.114.114.114
 server=/wenyucdn.com/114.114.114.114
 server=/wenyupages.com/114.114.114.114
 server=/wenzaizhibo.com/114.114.114.114
