accelerated-domains: add zbjzgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100139,6 +100139,7 @@ server=/zbjdr.com/114.114.114.114
 server=/zbjimg.com/114.114.114.114
 server=/zbjsaas.com/114.114.114.114
 server=/zbjwork.com/114.114.114.114
+server=/zbjzgroup.com/114.114.114.114
 server=/zbkb.com/114.114.114.114
 server=/zbkszx.net/114.114.114.114
 server=/zblhh.com/114.114.114.114
