--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101238,6 +101238,7 @@ server=/zhenren.com/114.114.114.114
 server=/zhenrongbao.com/114.114.114.114
 server=/zhenruhotels.com/114.114.114.114
 server=/zhenrun.press/114.114.114.114
+server=/zhenshi.com/114.114.114.114
 server=/zhenshigroup.com/114.114.114.114
 server=/zhensiyu.com/114.114.114.114
 server=/zhenstyle.com/114.114.114.114
