--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102518,6 +102518,7 @@ server=/zj-syfj.com/114.114.114.114
 server=/zj-tiansong.com/114.114.114.114
 server=/zj-tuna.com/114.114.114.114
 server=/zj-yinlong.com/114.114.114.114
+server=/zj-zxjx.com/114.114.114.114
 server=/zj-zyhb.com/114.114.114.114
 server=/zj.com/114.114.114.114
 server=/zj01.com/114.114.114.114
