accelerated-domains: add zjzfj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102932,6 +102932,7 @@ server=/zjzajsjt.com/114.114.114.114
 server=/zjzcec.com/114.114.114.114
 server=/zjzcen.com/114.114.114.114
 server=/zjzdgj.com/114.114.114.114
+server=/zjzfj.com/114.114.114.114
 server=/zjzfjs.com/114.114.114.114
 server=/zjzg.com/114.114.114.114
 server=/zjzhd.com/114.114.114.114
