accelerated-domains: add karl-led.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53145,6 +53145,7 @@ server=/kap666.com/114.114.114.114
 server=/kaquanbao.com/114.114.114.114
 server=/karatetrend.com/114.114.114.114
 server=/kargocard.com/114.114.114.114
+server=/karl-led.com/114.114.114.114
 server=/karlxy.xyz/114.114.114.114
 server=/karlzhou.com/114.114.114.114
 server=/karrytech.com/114.114.114.114
