--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24720,6 +24720,7 @@ server=/dafangya.com/114.114.114.114
 server=/dafanshu.com/114.114.114.114
 server=/dafaun.com/114.114.114.114
 server=/daffaite.com/114.114.114.114
+server=/dafmgroup.com/114.114.114.114
 server=/dafork.com/114.114.114.114
 server=/dagangcheng.com/114.114.114.114
 server=/dagongcredit.com/114.114.114.114
