accelerated-domains: add ziir-robot.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102323,6 +102323,7 @@ server=/zihu.com/114.114.114.114
 server=/zihua.li/114.114.114.114
 server=/zihua01.com/114.114.114.114
 server=/zihuazhijia.com/114.114.114.114
+server=/ziir-robot.com/114.114.114.114
 server=/ziisp.com/114.114.114.114
 server=/ziji.work/114.114.114.114
 server=/zijiang.com/114.114.114.114
