--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102542,6 +102542,7 @@ server=/zjaf.net/114.114.114.114
 server=/zjafl.com/114.114.114.114
 server=/zjags.com/114.114.114.114
 server=/zjai.xyz/114.114.114.114
+server=/zjaijiagroup.com/114.114.114.114
 server=/zjaikang.com/114.114.114.114
 server=/zjairports.com/114.114.114.114
 server=/zjaqxy.com/114.114.114.114
