accelerated-domains: add gjlease.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34681,6 +34681,7 @@ server=/gjjiaxiao.com/114.114.114.114
 server=/gjjnhb.com/114.114.114.114
 server=/gjjsbz.com/114.114.114.114
 server=/gjkkdashb4.fun/114.114.114.114
+server=/gjlease.com/114.114.114.114
 server=/gjmbwxpt.com/114.114.114.114
 server=/gjmbwxzx.com/114.114.114.114
 server=/gjmedashb0.fun/114.114.114.114
