--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41023,6 +41023,7 @@ server=/head-way.com/114.114.114.114
 server=/headconsultant.com/114.114.114.114
 server=/header.cc/114.114.114.114
 server=/heading123.com/114.114.114.114
+server=/headingfilter.com/114.114.114.114
 server=/headphoneclub.com/114.114.114.114
 server=/healrna.com/114.114.114.114
 server=/healthan.net/114.114.114.114
