accelerated-domains: add hzjinlu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45412,6 +45412,7 @@ server=/hzjiantong.com/114.114.114.114
 server=/hzjiaro.com/114.114.114.114
 server=/hzjie7.com/114.114.114.114
 server=/hzjingxian.com/114.114.114.114
+server=/hzjinlu.com/114.114.114.114
 server=/hzjiuyimo.com/114.114.114.114
 server=/hzjizhun.com/114.114.114.114
 server=/hzjlcs.com/114.114.114.114
