--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58583,6 +58583,7 @@ server=/luxurymany.com/114.114.114.114
 server=/luxuryshopwatch.com/114.114.114.114
 server=/luyanghui.com/114.114.114.114
 server=/luyanhui.com/114.114.114.114
+server=/luyaodz.com/114.114.114.114
 server=/luyecanyin.com/114.114.114.114
 server=/luyihr.com/114.114.114.114
 server=/luyijiaoyu.com/114.114.114.114
