--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75447,6 +75447,7 @@ server=/shanyhs.com/114.114.114.114
 server=/shanyishanmei.com/114.114.114.114
 server=/shanyougame.com/114.114.114.114
 server=/shanyouharness.com/114.114.114.114
+server=/shanyu.com/114.114.114.114
 server=/shanyuankj.com/114.114.114.114
 server=/shanyuanms.com/114.114.114.114
 server=/shanyue.tech/114.114.114.114
