accelerated-domains: add tofine.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83212,6 +83212,7 @@ server=/toec.com/114.114.114.114
 server=/toecsec.com/114.114.114.114
 server=/tofengmi.com/114.114.114.114
 server=/tofflon.com/114.114.114.114
+server=/tofine.com/114.114.114.114
 server=/togj.com/114.114.114.114
 server=/togoalad.com/114.114.114.114
 server=/togocareer.com/114.114.114.114
