accelerated-domains: add weilindct.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88124,6 +88124,7 @@ server=/weilenicetime.com/114.114.114.114
 server=/weileryiyt.com/114.114.114.114
 server=/weiliangsport.com/114.114.114.114
 server=/weilihealth.com/114.114.114.114
+server=/weilindct.com/114.114.114.114
 server=/weiling520.com/114.114.114.114
 server=/weilingapp.com/114.114.114.114
 server=/weilinggame.com/114.114.114.114
