--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100219,6 +100219,7 @@ server=/zcdlkeji.com/114.114.114.114
 server=/zcdog.com/114.114.114.114
 server=/zcdsp.com/114.114.114.114
 server=/zcdz1688.com/114.114.114.114
+server=/zcedi.com/114.114.114.114
 server=/zcedustudy.com/114.114.114.114
 server=/zcfc.com/114.114.114.114
 server=/zcfirst.com/114.114.114.114
