--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102599,6 +102599,7 @@ server=/zjdata.net/114.114.114.114
 server=/zjdianying.com/114.114.114.114
 server=/zjdjc.com/114.114.114.114
 server=/zjdkjs.com/114.114.114.114
+server=/zjdl.com/114.114.114.114
 server=/zjdljc.com/114.114.114.114
 server=/zjdljt.com/114.114.114.114
 server=/zjdnajy.com/114.114.114.114
