accelerated-domains: add zjxhxny.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102913,6 +102913,7 @@ server=/zjxdjz.com/114.114.114.114
 server=/zjxf119.com/114.114.114.114
 server=/zjxhbj.com/114.114.114.114
 server=/zjxhgd.com/114.114.114.114
+server=/zjxhxny.com/114.114.114.114
 server=/zjxiangyou.com/114.114.114.114
 server=/zjxindu.com/114.114.114.114
 server=/zjxinyun.com/114.114.114.114
