accelerated-domains: add zjdetong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102597,6 +102597,7 @@ server=/zjcywx.com/114.114.114.114
 server=/zjcyyy.com/114.114.114.114
 server=/zjdashi.com/114.114.114.114
 server=/zjdata.net/114.114.114.114
+server=/zjdetong.com/114.114.114.114
 server=/zjdianying.com/114.114.114.114
 server=/zjdjc.com/114.114.114.114
 server=/zjdkjs.com/114.114.114.114
