--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103521,6 +103521,7 @@ server=/zsbyw.com/114.114.114.114
 server=/zsbzsw.com/114.114.114.114
 server=/zscaishang.com/114.114.114.114
 server=/zscch.com/114.114.114.114
+server=/zschem.com/114.114.114.114
 server=/zscz0768.com/114.114.114.114
 server=/zsd.name/114.114.114.114
 server=/zsdianlan.com/114.114.114.114
