--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20145,6 +20145,7 @@ server=/chinaiut.com/114.114.114.114
 server=/chinajan.com/114.114.114.114
 server=/chinajcz.com/114.114.114.114
 server=/chinajeweler.com/114.114.114.114
+server=/chinajienuo.com/114.114.114.114
 server=/chinajincity.com/114.114.114.114
 server=/chinajinlong.com/114.114.114.114
 server=/chinajinzhan.com/114.114.114.114
