--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53656,6 +53656,7 @@ server=/kingdeezx.com/114.114.114.114
 server=/kingdelgc.com/114.114.114.114
 server=/kingdom-ceramic.com/114.114.114.114
 server=/kingdomfishing.com/114.114.114.114
+server=/kingdomsolar.net/114.114.114.114
 server=/kingdraw.com/114.114.114.114
 server=/kingdun.cc/114.114.114.114
 server=/kingdun.net/114.114.114.114
