accelerated-domains: add byqsc.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16955,6 +16955,7 @@ server=/bypbn.com/114.114.114.114
 server=/bypos.net/114.114.114.114
 server=/byprxy.com/114.114.114.114
 server=/byqcxy.com/114.114.114.114
+server=/byqsc.net/114.114.114.114
 server=/byqzw.com/114.114.114.114
 server=/byr-navi.com/114.114.114.114
 server=/byr.cc/114.114.114.114
