accelerated-domains: add chinawinjoy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20475,6 +20475,7 @@ server=/chinawenben.com/114.114.114.114
 server=/chinawerewolf.com/114.114.114.114
 server=/chinawie.com/114.114.114.114
 server=/chinawindnews.com/114.114.114.114
+server=/chinawinjoy.com/114.114.114.114
 server=/chinawiserv.com/114.114.114.114
 server=/chinawitmedia.com/114.114.114.114
 server=/chinawoodnet.com/114.114.114.114
