--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102866,6 +102866,7 @@ server=/zjsxlt.com/114.114.114.114
 server=/zjsxrz.com/114.114.114.114
 server=/zjsxss.com/114.114.114.114
 server=/zjszbank.com/114.114.114.114
+server=/zjszjz.com/114.114.114.114
 server=/zjszsyy.com/114.114.114.114
 server=/zjszzs.com/114.114.114.114
 server=/zjt2017.com/114.114.114.114
