--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95512,6 +95512,7 @@ server=/yankanshu.cc/114.114.114.114
 server=/yankanshu.net/114.114.114.114
 server=/yankay.com/114.114.114.114
 server=/yanke360.com/114.114.114.114
+server=/yankon.com/114.114.114.114
 server=/yankong.com/114.114.114.114
 server=/yanliu.org/114.114.114.114
 server=/yanlong.shop/114.114.114.114
