--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31177,6 +31177,7 @@ server=/fcgzrkq.com/114.114.114.114
 server=/fcgzrzyqxyj.com/114.114.114.114
 server=/fchospital.com/114.114.114.114
 server=/fcjjdbsc.com/114.114.114.114
+server=/fcjjt.com/114.114.114.114
 server=/fcjob.net/114.114.114.114
 server=/fcjob88.com/114.114.114.114
 server=/fcjtaobao.com/114.114.114.114
