accelerated-domains: add jihuadyes.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49820,6 +49820,7 @@ server=/jiheyun.com/114.114.114.114
 server=/jihisy.com/114.114.114.114
 server=/jihot.com/114.114.114.114
 server=/jihuachina.com/114.114.114.114
+server=/jihuadyes.com/114.114.114.114
 server=/jihuanshe.com/114.114.114.114
 server=/jihubear.com/114.114.114.114
 server=/jihui88.com/114.114.114.114
