--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49912,6 +49912,7 @@ server=/jimuhezi.com/114.114.114.114
 server=/jimujiazx.com/114.114.114.114
 server=/jimuyk.com/114.114.114.114
 server=/jin-huang.net/114.114.114.114
+server=/jin-xiang.com/114.114.114.114
 server=/jin10.com/114.114.114.114
 server=/jin10x.com/114.114.114.114
 server=/jinan-marathon.com/114.114.114.114
