--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52998,6 +52998,7 @@ server=/kanglu.com/114.114.114.114
 server=/kangpeining.com/114.114.114.114
 server=/kangqiao-sh.com/114.114.114.114
 server=/kangre.com/114.114.114.114
+server=/kangrunpharm.com/114.114.114.114
 server=/kangshuai.biz/114.114.114.114
 server=/kangsibeauty.com/114.114.114.114
 server=/kangtaiwang.com/114.114.114.114
