--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76653,6 +76653,7 @@ server=/shuanglongjp.com/114.114.114.114
 server=/shuanglongtai.com/114.114.114.114
 server=/shuangmatbs.com/114.114.114.114
 server=/shuangmei2008.com/114.114.114.114
+server=/shuangniaoslhl.com/114.114.114.114
 server=/shuangshiyijie.com/114.114.114.114
 server=/shuangtao.com/114.114.114.114
 server=/shuangtiantech.com/114.114.114.114
