--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81536,6 +81536,7 @@ server=/tartscenter.com/114.114.114.114
 server=/tarvengeful.com/114.114.114.114
 server=/tasaiwang.com/114.114.114.114
 server=/taschb.com/114.114.114.114
+server=/tashine.com/114.114.114.114
 server=/tasiyun.com/114.114.114.114
 server=/taskcity.com/114.114.114.114
 server=/tasly.com/114.114.114.114
