accelerated-domains: add wecanbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87921,6 +87921,7 @@ server=/webxmf.com/114.114.114.114
 server=/webyang.net/114.114.114.114
 server=/webyounger.com/114.114.114.114
 server=/webzzcdn.com/114.114.114.114
+server=/wecanbio.com/114.114.114.114
 server=/wecare-bio.com/114.114.114.114
 server=/wecarepet.com/114.114.114.114
 server=/wecash.net/114.114.114.114
