accelerated-domains: add wuwangnongseed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90479,6 +90479,7 @@ server=/wutos.com/114.114.114.114
 server=/wutuojia.com/114.114.114.114
 server=/wuuconix.link/114.114.114.114
 server=/wuuxiang.com/114.114.114.114
+server=/wuwangnongseed.com/114.114.114.114
 server=/wuweijob.com/114.114.114.114
 server=/wuweimj.com/114.114.114.114
 server=/wuweiqx.com/114.114.114.114
