accelerated-domains: add zbchem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100135,6 +100135,7 @@ server=/zbbus.com/114.114.114.114
 server=/zbc.pub/114.114.114.114
 server=/zbc.wiki/114.114.114.114
 server=/zbca.com/114.114.114.114
+server=/zbchem.com/114.114.114.114
 server=/zbcool.com/114.114.114.114
 server=/zbdedu.com/114.114.114.114
 server=/zbdzy.com/114.114.114.114
