accelerated-domains: add zjanyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102570,6 +102570,7 @@ server=/zjai.xyz/114.114.114.114
 server=/zjaijiagroup.com/114.114.114.114
 server=/zjaikang.com/114.114.114.114
 server=/zjairports.com/114.114.114.114
+server=/zjanyy.com/114.114.114.114
 server=/zjaqxy.com/114.114.114.114
 server=/zjautoparts.com/114.114.114.114
 server=/zjaxzl.com/114.114.114.114
