--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102867,6 +102867,7 @@ server=/zjskgr.com/114.114.114.114
 server=/zjskjt.com/114.114.114.114
 server=/zjsmhg.com/114.114.114.114
 server=/zjsms.com/114.114.114.114
+server=/zjspas.com/114.114.114.114
 server=/zjsszsjy.com/114.114.114.114
 server=/zjstar-electric.com/114.114.114.114
 server=/zjstv.com/114.114.114.114
