--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102753,6 +102753,7 @@ server=/zjkdqz.com/114.114.114.114
 server=/zjke.com/114.114.114.114
 server=/zjkelan.com/114.114.114.114
 server=/zjkeling.com/114.114.114.114
+server=/zjkfcapital.com/114.114.114.114
 server=/zjkgdcs.com/114.114.114.114
 server=/zjkgjj.com/114.114.114.114
 server=/zjkim.com/114.114.114.114
