--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103293,6 +103293,7 @@ server=/zoharforce.com/114.114.114.114
 server=/zohead.com/114.114.114.114
 server=/zohi.tv/114.114.114.114
 server=/zoioo.com/114.114.114.114
+server=/zoje.com/114.114.114.114
 server=/zokmetal.com/114.114.114.114
 server=/zokogo.com/114.114.114.114
 server=/zol-img.com/114.114.114.114
