--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101296,6 +101296,7 @@ server=/zhexingzx.com/114.114.114.114
 server=/zhexinit.com/114.114.114.114
 server=/zheye.com/114.114.114.114
 server=/zheyibu.com/114.114.114.114
+server=/zheyinleasing.com/114.114.114.114
 server=/zheyouxinxi.com/114.114.114.114
 server=/zheyuntech.com/114.114.114.114
 server=/zhezheai.com/114.114.114.114
