--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65715,6 +65715,7 @@ server=/nupktsz.com/114.114.114.114
 server=/nuptec.com/114.114.114.114
 server=/nuqixi.com/114.114.114.114
 server=/nuqk.com/114.114.114.114
+server=/nurotron.com/114.114.114.114
 server=/nuszar.xyz/114.114.114.114
 server=/nutdh.com/114.114.114.114
 server=/nutriease.com/114.114.114.114
