accelerated-domains: add tancy.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81263,6 +81263,7 @@ server=/tanbaoe.com/114.114.114.114
 server=/tanbo.name/114.114.114.114
 server=/tancdn.com/114.114.114.114
 server=/tanchinese.com/114.114.114.114
+server=/tancy.net/114.114.114.114
 server=/tandaenergy.com/114.114.114.114
 server=/tandehao.com/114.114.114.114
 server=/tanewmaterial.com/114.114.114.114
