accelerated-domains: add gngnk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35145,6 +35145,7 @@ server=/gnehr.com/114.114.114.114
 server=/gnete.com/114.114.114.114
 server=/gnetis.com/114.114.114.114
 server=/gng92.com/114.114.114.114
+server=/gngnk.com/114.114.114.114
 server=/gnhpc.com/114.114.114.114
 server=/gnice-it.com/114.114.114.114
 server=/gnict.com/114.114.114.114
