accelerated-domains: add strong-light.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79266,6 +79266,7 @@ server=/streamaxtech.com/114.114.114.114
 server=/streamcomputing.com/114.114.114.114
 server=/streamlakeapi.com/114.114.114.114
 server=/streffy.com/114.114.114.114
+server=/strong-light.com/114.114.114.114
 server=/strong-study.com/114.114.114.114
 server=/strongfc.com/114.114.114.114
 server=/strongled.com/114.114.114.114
