--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89584,6 +89584,7 @@ server=/wmdang.com/114.114.114.114
 server=/wmfanyi.com/114.114.114.114
 server=/wmhcn.net/114.114.114.114
 server=/wmiao.com/114.114.114.114
+server=/wmidgroup.com/114.114.114.114
 server=/wmimg.com/114.114.114.114
 server=/wming.com/114.114.114.114
 server=/wmintl.com/114.114.114.114
