--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102719,6 +102719,7 @@ server=/zjiecode.com/114.114.114.114
 server=/zjiekai.com/114.114.114.114
 server=/zjiis.com/114.114.114.114
 server=/zjim.org/114.114.114.114
+server=/zjimc.com/114.114.114.114
 server=/zjipai.com/114.114.114.114
 server=/zjipc.com/114.114.114.114
 server=/zjitc.net/114.114.114.114
