accelerated-domains: add zjshuangtu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102867,6 +102867,7 @@ server=/zjshcl.com/114.114.114.114
 server=/zjshibao.com/114.114.114.114
 server=/zjshining.com/114.114.114.114
 server=/zjshjkj.com/114.114.114.114
+server=/zjshuangtu.com/114.114.114.114
 server=/zjshuhao.com/114.114.114.114
 server=/zjshuo.com/114.114.114.114
 server=/zjsight.com/114.114.114.114
