accelerated-domains: add yzmgf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99918,6 +99918,7 @@ server=/yzmat.com/114.114.114.114
 server=/yzmcms.com/114.114.114.114
 server=/yzmcxx.com/114.114.114.114
 server=/yzmg.com/114.114.114.114
+server=/yzmgf.com/114.114.114.114
 server=/yzmiao03.com/114.114.114.114
 server=/yzmls.com/114.114.114.114
 server=/yzmoney.com/114.114.114.114
