--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102906,6 +102906,7 @@ server=/zjtcpm.com/114.114.114.114
 server=/zjtdw.com/114.114.114.114
 server=/zjtdyl.com/114.114.114.114
 server=/zjteam.com/114.114.114.114
+server=/zjtggroup.com/114.114.114.114
 server=/zjthealth.com/114.114.114.114
 server=/zjtkdz.com/114.114.114.114
 server=/zjtlcb.com/114.114.114.114
