accelerated-domains: add wellongmedical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88383,6 +88383,7 @@ server=/wellcee.com/114.114.114.114
 server=/wellhope.net/114.114.114.114
 server=/welllinkio.com/114.114.114.114
 server=/wellnode.com/114.114.114.114
+server=/wellongmedical.com/114.114.114.114
 server=/wellpie.com/114.114.114.114
 server=/wellplas.com/114.114.114.114
 server=/wellselectronic.com/114.114.114.114
