accelerated-domains: add conco-esd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22960,6 +22960,7 @@ server=/conantoptical.com/114.114.114.114
 server=/conbagroup.com/114.114.114.114
 server=/conchdate.com/114.114.114.114
 server=/conchdesktop.com/114.114.114.114
+server=/conco-esd.com/114.114.114.114
 server=/concordiashanghai.org/114.114.114.114
 server=/concordmedical.com/114.114.114.114
 server=/concox.net/114.114.114.114
