accelerated-domains: add jimei-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49891,6 +49891,7 @@ server=/jimagroup.com/114.114.114.114
 server=/jimahui.com/114.114.114.114
 server=/jimakj.com/114.114.114.114
 server=/jimay.com/114.114.114.114
+server=/jimei-cn.com/114.114.114.114
 server=/jimeilm.com/114.114.114.114
 server=/jimeisilk.com/114.114.114.114
 server=/jimeius.com/114.114.114.114
