accelerated-domains: add meitong-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60469,6 +60469,7 @@ server=/meitianhui.com/114.114.114.114
 server=/meitianzuche.com/114.114.114.114
 server=/meitie.com/114.114.114.114
 server=/meitifagao.com/114.114.114.114
+server=/meitong-tech.com/114.114.114.114
 server=/meitq.com/114.114.114.114
 server=/meitu-int.com/114.114.114.114
 server=/meitu-mobile.com/114.114.114.114
