--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72194,6 +72194,7 @@ server=/refire.com/114.114.114.114
 server=/reformdata.org/114.114.114.114
 server=/reg007.com/114.114.114.114
 server=/regen-life16.com/114.114.114.114
+server=/regenchem.com/114.114.114.114
 server=/regengbaike.com/114.114.114.114
 server=/regexlab.com/114.114.114.114
 server=/regexr-cn.com/114.114.114.114
