--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92657,6 +92657,7 @@ server=/xincarshow.com/114.114.114.114
 server=/xincg.com/114.114.114.114
 server=/xincha.com/114.114.114.114
 server=/xinchacha.com/114.114.114.114
+server=/xinchaipower.com/114.114.114.114
 server=/xinchanfeng.com/114.114.114.114
 server=/xinchangol.com/114.114.114.114
 server=/xinchao.com/114.114.114.114
