--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102822,6 +102822,7 @@ server=/zjnad.com/114.114.114.114
 server=/zjnature.com/114.114.114.114
 server=/zjnav.com/114.114.114.114
 server=/zjnbxzc.com/114.114.114.114
+server=/zjndjs.com/114.114.114.114
 server=/zjnrcb.com/114.114.114.114
 server=/zjnrg.com/114.114.114.114
 server=/zjolcdn.com/114.114.114.114
