--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19507,6 +19507,7 @@ server=/chenxuehu.com/114.114.114.114
 server=/chenxuhou.com/114.114.114.114
 server=/chenxunyun.com/114.114.114.114
 server=/cheny.org/114.114.114.114
+server=/chenyanghg.com/114.114.114.114
 server=/chenyea.com/114.114.114.114
 server=/chenyifaer67373.com/114.114.114.114
 server=/chenyistyle.com/114.114.114.114
