accelerated-domains: add fengyeholding.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31570,6 +31570,7 @@ server=/fengxinglihua.com/114.114.114.114
 server=/fengxuan.co/114.114.114.114
 server=/fengyan.cc/114.114.114.114
 server=/fengyang.fun/114.114.114.114
+server=/fengyeholding.com/114.114.114.114
 server=/fengyitong.name/114.114.114.114
 server=/fengyixin.com/114.114.114.114
 server=/fengyubf.com/114.114.114.114
