--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34756,6 +34756,7 @@ server=/gkxd.com/114.114.114.114
 server=/gkxs.com/114.114.114.114
 server=/gkyly.com/114.114.114.114
 server=/gkzhan.com/114.114.114.114
+server=/gkzj.com/114.114.114.114
 server=/gkzj.net/114.114.114.114
 server=/gkzpfw.com/114.114.114.114
 server=/gkzppt.com/114.114.114.114
