--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50648,6 +50648,7 @@ server=/jjbang.com/114.114.114.114
 server=/jjbank.net/114.114.114.114
 server=/jjbbs.com/114.114.114.114
 server=/jjbctv.com/114.114.114.114
+server=/jjbearings.com/114.114.114.114
 server=/jjbhn.com/114.114.114.114
 server=/jjbisai.com/114.114.114.114
 server=/jjbnews.xyz/114.114.114.114
