--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102764,6 +102764,7 @@ server=/zjjudong.com/114.114.114.114
 server=/zjjxjt.com/114.114.114.114
 server=/zjjy.com/114.114.114.114
 server=/zjjytyt.com/114.114.114.114
+server=/zjjzgf.com/114.114.114.114
 server=/zjjzxgj.com/114.114.114.114
 server=/zjjzyxh.com/114.114.114.114
 server=/zjkangzh.com/114.114.114.114
