--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103097,6 +103097,7 @@ server=/zkzls.com/114.114.114.114
 server=/zl-steelpipe.com/114.114.114.114
 server=/zl1006.com/114.114.114.114
 server=/zl168.xyz/114.114.114.114
+server=/zl56.com/114.114.114.114
 server=/zl99.org/114.114.114.114
 server=/zlbaba.com/114.114.114.114
 server=/zlbagx.com/114.114.114.114
