accelerated-domains: add zibsc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102335,6 +102335,7 @@ server=/zibomarathon.com/114.114.114.114
 server=/zibonewbright.com/114.114.114.114
 server=/zibowater.com/114.114.114.114
 server=/zibozhongxue.com/114.114.114.114
+server=/zibsc.com/114.114.114.114
 server=/zichenit.com/114.114.114.114
 server=/zicini.com/114.114.114.114
 server=/zicp.fun/114.114.114.114
