--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102743,6 +102743,7 @@ server=/zjjfpharm.com/114.114.114.114
 server=/zjjgcyz.com/114.114.114.114
 server=/zjjgy.com/114.114.114.114
 server=/zjjgylydjc.com/114.114.114.114
+server=/zjjgzdh.com/114.114.114.114
 server=/zjjh.com/114.114.114.114
 server=/zjjiaoke.com/114.114.114.114
 server=/zjjiaozhou.com/114.114.114.114
