--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102965,6 +102965,7 @@ server=/zjxhgd.com/114.114.114.114
 server=/zjxhxny.com/114.114.114.114
 server=/zjxiangyou.com/114.114.114.114
 server=/zjxindu.com/114.114.114.114
+server=/zjxinghe.com/114.114.114.114
 server=/zjxinyun.com/114.114.114.114
 server=/zjxlmb.com/114.114.114.114
 server=/zjxltz.com/114.114.114.114
