accelerated-domains: add miaxis.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60972,6 +60972,7 @@ server=/miaozhu888.com/114.114.114.114
 server=/miaozhun.com/114.114.114.114
 server=/miaozhunjing.net/114.114.114.114
 server=/miaozuo.com/114.114.114.114
+server=/miaxis.com/114.114.114.114
 server=/miaxis.net/114.114.114.114
 server=/miazhiyou.com/114.114.114.114
 server=/mibaoxian.com/114.114.114.114
