--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19817,6 +19817,7 @@ server=/china-yida.com/114.114.114.114
 server=/china-yuli.com/114.114.114.114
 server=/china-yulin.com/114.114.114.114
 server=/china-zbycg.com/114.114.114.114
+server=/china-zeiss.com/114.114.114.114
 server=/china-zhongda.net/114.114.114.114
 server=/china-zikao.com/114.114.114.114
 server=/china-zyd.com/114.114.114.114
