accelerated-domains: add baolong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13421,6 +13421,7 @@ server=/baolansz.com/114.114.114.114
 server=/baolic.com/114.114.114.114
 server=/baolimingyuefenghua.com/114.114.114.114
 server=/baolizx.com/114.114.114.114
+server=/baolong.com/114.114.114.114
 server=/baoltx.com/114.114.114.114
 server=/baolu.store/114.114.114.114
 server=/baomei.tv/114.114.114.114
