--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22572,6 +22572,7 @@ server=/cntexnet.com/114.114.114.114
 server=/cntheory.com/114.114.114.114
 server=/cnthinkers.com/114.114.114.114
 server=/cntingyun.com/114.114.114.114
+server=/cntle.com/114.114.114.114
 server=/cntlfs.com/114.114.114.114
 server=/cntlxd.com/114.114.114.114
 server=/cntmc.com/114.114.114.114
