accelerated-domains: add vistahelmets.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86526,6 +86526,7 @@ server=/visitsz.com/114.114.114.114
 server=/viskem.com/114.114.114.114
 server=/vista-china.net/114.114.114.114
 server=/vista123.com/114.114.114.114
+server=/vistahelmets.com/114.114.114.114
 server=/vistastory.com/114.114.114.114
 server=/visualchina.com/114.114.114.114
 server=/visvachina.com/114.114.114.114
