--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87482,6 +87482,7 @@ server=/wanliduo.com/114.114.114.114
 server=/wanliniu.com/114.114.114.114
 server=/wanlitong.com/114.114.114.114
 server=/wanliyangbo.com/114.114.114.114
+server=/wanmaco.com/114.114.114.114
 server=/wanmei.com/114.114.114.114
 server=/wanmei.net/114.114.114.114
 server=/wanmei888.com/114.114.114.114
