--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102980,6 +102980,7 @@ server=/zjxnd.com/114.114.114.114
 server=/zjxpp.com/114.114.114.114
 server=/zjxqyy.com/114.114.114.114
 server=/zjxsbank.com/114.114.114.114
+server=/zjxssj.com/114.114.114.114
 server=/zjxtxs.com/114.114.114.114
 server=/zjxwjs.com/114.114.114.114
 server=/zjxwtoy.com/114.114.114.114
