--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102694,6 +102694,7 @@ server=/zjgzzc.com/114.114.114.114
 server=/zjhac.com/114.114.114.114
 server=/zjhaitian.com/114.114.114.114
 server=/zjhangyin.com/114.114.114.114
+server=/zjharbor.com/114.114.114.114
 server=/zjhbdlkj.com/114.114.114.114
 server=/zjhby.com/114.114.114.114
 server=/zjhcbank.com/114.114.114.114
