accelerated-domains: add zjtic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102929,6 +102929,7 @@ server=/zjtdyl.com/114.114.114.114
 server=/zjteam.com/114.114.114.114
 server=/zjtggroup.com/114.114.114.114
 server=/zjthealth.com/114.114.114.114
+server=/zjtic.com/114.114.114.114
 server=/zjtkdz.com/114.114.114.114
 server=/zjtlcb.com/114.114.114.114
 server=/zjtntd.com/114.114.114.114
