--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18743,6 +18743,7 @@ server=/ceprei.org/114.114.114.114
 server=/ceprintdesign.com/114.114.114.114
 server=/cer.net/114.114.114.114
 server=/ceracdn.net/114.114.114.114
+server=/ceradir.com/114.114.114.114
 server=/cerambath.org/114.114.114.114
 server=/ceramicschina.com/114.114.114.114
 server=/cere.cc/114.114.114.114
