accelerated-domains: add ecovacsgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29069,6 +29069,7 @@ server=/ecoprint.tech/114.114.114.114
 server=/ecorr.org/114.114.114.114
 server=/ecouser.net/114.114.114.114
 server=/ecovacs.com/114.114.114.114
+server=/ecovacsgroup.com/114.114.114.114
 server=/ecp-cloud.com/114.114.114.114
 server=/ecp-cloud.net/114.114.114.114
 server=/ecphk.com/114.114.114.114
