accelerated-domains: add gl-zj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34778,6 +34778,7 @@ server=/gl-jdy.com/114.114.114.114
 server=/gl-mes.com/114.114.114.114
 server=/gl-qf.com/114.114.114.114
 server=/gl-uav.com/114.114.114.114
+server=/gl-zj.com/114.114.114.114
 server=/gl102.com/114.114.114.114
 server=/gl114.net/114.114.114.114
 server=/gl170.com/114.114.114.114
