accelerated-domains: add shuanglingroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76668,6 +76668,7 @@ server=/shuangle56.com/114.114.114.114
 server=/shuangle888.com/114.114.114.114
 server=/shuangliangbale.com/114.114.114.114
 server=/shuanglin.com/114.114.114.114
+server=/shuanglingroup.com/114.114.114.114
 server=/shuanglongjp.com/114.114.114.114
 server=/shuanglongtai.com/114.114.114.114
 server=/shuangmatbs.com/114.114.114.114
