accelerated-domains: add zjmichem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102826,6 +102826,7 @@ server=/zjmc.tv/114.114.114.114
 server=/zjmct.com/114.114.114.114
 server=/zjmetal.com/114.114.114.114
 server=/zjmi-mall.com/114.114.114.114
+server=/zjmichem.com/114.114.114.114
 server=/zjminb.com/114.114.114.114
 server=/zjminghong.com/114.114.114.114
 server=/zjmingzhen.com/114.114.114.114
