accelerated-domains: add zm-ep.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103190,6 +103190,7 @@ server=/zlzscq.com/114.114.114.114
 server=/zlzt.com/114.114.114.114
 server=/zm-assemble.com/114.114.114.114
 server=/zm-clock.com/114.114.114.114
+server=/zm-ep.com/114.114.114.114
 server=/zm-grow.com/114.114.114.114
 server=/zm-introduce.com/114.114.114.114
 server=/zm-invite.com/114.114.114.114
