--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19973,6 +19973,7 @@ server=/chinacxjs.org/114.114.114.114
 server=/chinacyx.com/114.114.114.114
 server=/chinadafen.com/114.114.114.114
 server=/chinadailyglobal.com/114.114.114.114
+server=/chinadais.net/114.114.114.114
 server=/chinadance.com/114.114.114.114
 server=/chinadart.com/114.114.114.114
 server=/chinadatatrading.com/114.114.114.114
