accelerated-domains: add cybstar.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24332,6 +24332,7 @@ server=/cybertogether.net/114.114.114.114
 server=/cyberv.shop/114.114.114.114
 server=/cyberway-china.net/114.114.114.114
 server=/cybofa.com/114.114.114.114
+server=/cybstar.com/114.114.114.114
 server=/cybtc.com/114.114.114.114
 server=/cybtc.info/114.114.114.114
 server=/cyc2018.xyz/114.114.114.114
