--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35796,6 +35796,7 @@ server=/grondrens.com/114.114.114.114
 server=/grouk.com/114.114.114.114
 server=/group-purchasing.com/114.114.114.114
 server=/group-spl.com/114.114.114.114
+server=/group-wenyuan.com/114.114.114.114
 server=/group.citic/114.114.114.114
 server=/groupfangyuan.com/114.114.114.114
 server=/groupiklan.com/114.114.114.114
