accelerated-domains: add wasonchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87636,6 +87636,7 @@ server=/washun.com/114.114.114.114
 server=/washuw.com/114.114.114.114
 server=/wasintek.com/114.114.114.114
 server=/wasoinfo.com/114.114.114.114
+server=/wasonchina.com/114.114.114.114
 server=/wasu.com/114.114.114.114
 server=/wasu.tv/114.114.114.114
 server=/watch-space.com/114.114.114.114
