--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102899,6 +102899,7 @@ server=/zjsftc.com/114.114.114.114
 server=/zjsgjs.com/114.114.114.114
 server=/zjshcl.com/114.114.114.114
 server=/zjshibao.com/114.114.114.114
+server=/zjshijian.com/114.114.114.114
 server=/zjshining.com/114.114.114.114
 server=/zjshjkj.com/114.114.114.114
 server=/zjshuangtu.com/114.114.114.114
