--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21913,6 +21913,7 @@ server=/cn0-6.com/114.114.114.114
 server=/cn006.com/114.114.114.114
 server=/cn010w.com/114.114.114.114
 server=/cn0434.com/114.114.114.114
+server=/cn0577.net/114.114.114.114
 server=/cn0713.com/114.114.114.114
 server=/cn0779.com/114.114.114.114
 server=/cn0851.com/114.114.114.114
