--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97890,6 +97890,7 @@ server=/yoqu.net/114.114.114.114
 server=/yorentown.com/114.114.114.114
 server=/york-tech.com/114.114.114.114
 server=/york33.com/114.114.114.114
+server=/yorui.net/114.114.114.114
 server=/yoseleather.com/114.114.114.114
 server=/yostar.net/114.114.114.114
 server=/yostatic.com/114.114.114.114
