accelerated-domains: add zjeclean.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102670,6 +102670,7 @@ server=/zjdyjob.com/114.114.114.114
 server=/zjdzqt.com/114.114.114.114
 server=/zje.com/114.114.114.114
 server=/zjeagles.com/114.114.114.114
+server=/zjeclean.com/114.114.114.114
 server=/zjedps.com/114.114.114.114
 server=/zjedu.org/114.114.114.114
 server=/zjemec.com/114.114.114.114
