accelerated-domains: add chinafumao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20059,6 +20059,7 @@ server=/chinafsl.com/114.114.114.114
 server=/chinaftat.org/114.114.114.114
 server=/chinafuda.com/114.114.114.114
 server=/chinafudaoban.com/114.114.114.114
+server=/chinafumao.com/114.114.114.114
 server=/chinafxd.com/114.114.114.114
 server=/chinag.pro/114.114.114.114
 server=/chinagames.net/114.114.114.114
