--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29869,6 +29869,7 @@ server=/eosantpool.com/114.114.114.114
 server=/eoss-hj.com/114.114.114.114
 server=/ep-china.net/114.114.114.114
 server=/ep-eia.com/114.114.114.114
+server=/ep-zl.com/114.114.114.114
 server=/ep12.com/114.114.114.114
 server=/epaas.net/114.114.114.114
 server=/epaiclub.com/114.114.114.114
