--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83370,6 +83370,7 @@ server=/tongshun6.com/114.114.114.114
 server=/tongsuo.net/114.114.114.114
 server=/tongtaiamc.com/114.114.114.114
 server=/tongtech.com/114.114.114.114
+server=/tongtex-fashion.com/114.114.114.114
 server=/tongtianta.site/114.114.114.114
 server=/tongtool.com/114.114.114.114
 server=/tongtut.com/114.114.114.114
