accelerated-domains: add zhongp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101850,6 +101850,7 @@ server=/zhongnengrecycling.com/114.114.114.114
 server=/zhongnice.com/114.114.114.114
 server=/zhongniu.com/114.114.114.114
 server=/zhongnongjimu.com/114.114.114.114
+server=/zhongp.com/114.114.114.114
 server=/zhongpaiwang.com/114.114.114.114
 server=/zhongpingcapital.com/114.114.114.114
 server=/zhongpujiancai.com/114.114.114.114
