--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102773,6 +102773,7 @@ server=/zjjh.com/114.114.114.114
 server=/zjjiaoke.com/114.114.114.114
 server=/zjjiaozhou.com/114.114.114.114
 server=/zjjinuo.com/114.114.114.114
+server=/zjjinzi.com/114.114.114.114
 server=/zjjizhi.com/114.114.114.114
 server=/zjjjtec.com/114.114.114.114
 server=/zjjlfny.com/114.114.114.114
