accelerated-domains: add anliantest.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11228,6 +11228,7 @@ server=/anlai.com/114.114.114.114
 server=/anlaiye.com/114.114.114.114
 server=/anlewo.com/114.114.114.114
 server=/anlian.co/114.114.114.114
+server=/anliantest.com/114.114.114.114
 server=/anlibaby.com/114.114.114.114
 server=/anliget.com/114.114.114.114
 server=/anlilaw.com/114.114.114.114
