--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35815,6 +35815,7 @@ server=/grpindex.com/114.114.114.114
 server=/grspet.com/114.114.114.114
 server=/grstz.com/114.114.114.114
 server=/grt-china.com/114.114.114.114
+server=/grtrelay.com/114.114.114.114
 server=/grtsports.com/114.114.114.114
 server=/grulphaens.com/114.114.114.114
 server=/grumplesgroup.com/114.114.114.114
