accelerated-domains: add zbao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100172,6 +100172,7 @@ server=/zb1.org/114.114.114.114
 server=/zb18.net/114.114.114.114
 server=/zb580.tv/114.114.114.114
 server=/zb800.com/114.114.114.114
+server=/zbao.com/114.114.114.114
 server=/zbbar.net/114.114.114.114
 server=/zbbus.com/114.114.114.114
 server=/zbc.pub/114.114.114.114
