accelerated-domains: add cnzici.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22682,6 +22682,7 @@ server=/cnzhengmu.com/114.114.114.114
 server=/cnzhhy.com/114.114.114.114
 server=/cnzhiyuanhui.com/114.114.114.114
 server=/cnzhjk.com/114.114.114.114
+server=/cnzici.com/114.114.114.114
 server=/cnziyun.com/114.114.114.114
 server=/cnzjdd.com/114.114.114.114
 server=/cnzjj.com/114.114.114.114
