--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67638,6 +67638,7 @@ server=/pendoapp.com/114.114.114.114
 server=/pengbaoxuan.com/114.114.114.114
 server=/pengboguandao.com/114.114.114.114
 server=/pengchengenergy.com/114.114.114.114
+server=/pengfei.com/114.114.114.114
 server=/pengfei.tech/114.114.114.114
 server=/penghh.fun/114.114.114.114
 server=/penghui88.com/114.114.114.114
