--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102625,6 +102625,7 @@ server=/zjautoparts.com/114.114.114.114
 server=/zjaxzl.com/114.114.114.114
 server=/zjbaixiang.com/114.114.114.114
 server=/zjbanger.com/114.114.114.114
+server=/zjbar.com/114.114.114.114
 server=/zjbdfood.com/114.114.114.114
 server=/zjbdt.com/114.114.114.114
 server=/zjbeacon.com/114.114.114.114
