--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18878,6 +18878,7 @@ server=/cgaij.com/114.114.114.114
 server=/cgangs.com/114.114.114.114
 server=/cgboo.com/114.114.114.114
 server=/cgbtek.com/114.114.114.114
+server=/cgcable.com/114.114.114.114
 server=/cgcss.com/114.114.114.114
 server=/cgdeuvip.com/114.114.114.114
 server=/cgdown.com/114.114.114.114
