--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101185,6 +101185,7 @@ server=/zhehengsteel.com/114.114.114.114
 server=/zheishui.com/114.114.114.114
 server=/zheiyu.com/114.114.114.114
 server=/zhejiangcheng.com/114.114.114.114
+server=/zhejiangfc1998.com/114.114.114.114
 server=/zhejianglab.com/114.114.114.114
 server=/zhejiangliming.com/114.114.114.114
 server=/zhejianglong.com/114.114.114.114
