accelerated-domains: add zjcbcm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102641,6 +102641,7 @@ server=/zjca.org/114.114.114.114
 server=/zjcarnet.com/114.114.114.114
 server=/zjcb.com/114.114.114.114
 server=/zjcbank.com/114.114.114.114
+server=/zjcbcm.com/114.114.114.114
 server=/zjcbjy.com/114.114.114.114
 server=/zjcdn.com/114.114.114.114
 server=/zjcgmetal.com/114.114.114.114
