accelerated-domains: add zjmsbt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102859,6 +102859,7 @@ server=/zjmkzx.com/114.114.114.114
 server=/zjmobile.com/114.114.114.114
 server=/zjmoney.com/114.114.114.114
 server=/zjmrhpt.com/114.114.114.114
+server=/zjmsbt.com/114.114.114.114
 server=/zjmtw.com/114.114.114.114
 server=/zjmuex.com/114.114.114.114
 server=/zjmycn.com/114.114.114.114
