accelerated-domains: add lisenergy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57163,6 +57163,7 @@ server=/liriji.com/114.114.114.114
 server=/lirui.name/114.114.114.114
 server=/lis99.com/114.114.114.114
 server=/lisdn.com/114.114.114.114
+server=/lisenergy.com/114.114.114.114
 server=/lisheng.gold/114.114.114.114
 server=/lishengstone.com/114.114.114.114
 server=/lishi-test.com/114.114.114.114
