--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22090,6 +22090,7 @@ server=/cndds.com/114.114.114.114
 server=/cndelong.com/114.114.114.114
 server=/cndesign.com/114.114.114.114
 server=/cndezhong.com/114.114.114.114
+server=/cndf.net/114.114.114.114
 server=/cndfdt.com/114.114.114.114
 server=/cndfele.com/114.114.114.114
 server=/cndfilm.com/114.114.114.114
