--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25659,6 +25659,7 @@ server=/decohome.cc/114.114.114.114
 server=/decoration.ltd/114.114.114.114
 server=/decorcn.com/114.114.114.114
 server=/decwhy.com/114.114.114.114
+server=/dede-zj.com/114.114.114.114
 server=/dede168.com/114.114.114.114
 server=/dedebiz.com/114.114.114.114
 server=/dedecms.com/114.114.114.114
