--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18192,6 +18192,7 @@ server=/cd-frd.com/114.114.114.114
 server=/cd-hk.net/114.114.114.114
 server=/cd-hss.com/114.114.114.114
 server=/cd-kc.com/114.114.114.114
+server=/cd-ox.com/114.114.114.114
 server=/cd-pa.com/114.114.114.114
 server=/cd-psychologist.com/114.114.114.114
 server=/cd-rail.com/114.114.114.114
