accelerated-domains: add kkdgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53859,6 +53859,7 @@ server=/kkcodes.com/114.114.114.114
 server=/kkcoo.com/114.114.114.114
 server=/kkdaxue.com/114.114.114.114
 server=/kkddosdns.com/114.114.114.114
+server=/kkdgroup.com/114.114.114.114
 server=/kkdict.com/114.114.114.114
 server=/kkdnsv1.com/114.114.114.114
 server=/kkdownload.com/114.114.114.114
