accelerated-domains: add nbjoyo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63508,6 +63508,7 @@ server=/nbjingyong.com/114.114.114.114
 server=/nbjit.com/114.114.114.114
 server=/nbjlw.com/114.114.114.114
 server=/nbjnw.com/114.114.114.114
+server=/nbjoyo.com/114.114.114.114
 server=/nbjzjn.com/114.114.114.114
 server=/nbkaisheng.com/114.114.114.114
 server=/nbkc-rp.com/114.114.114.114
