accelerated-domains: add zljweb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103181,6 +103181,7 @@ server=/zlitoa.cc/114.114.114.114
 server=/zlitoa.com/114.114.114.114
 server=/zljrhb.com/114.114.114.114
 server=/zljskb.com/114.114.114.114
+server=/zljweb.com/114.114.114.114
 server=/zlkb.net/114.114.114.114
 server=/zlketang.com/114.114.114.114
 server=/zlkj123.com/114.114.114.114
