--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20161,6 +20161,7 @@ server=/chinajienuo.com/114.114.114.114
 server=/chinajincity.com/114.114.114.114
 server=/chinajinlong.com/114.114.114.114
 server=/chinajinzhan.com/114.114.114.114
+server=/chinajinzhou.com/114.114.114.114
 server=/chinajiuquan.com/114.114.114.114
 server=/chinajjz.com/114.114.114.114
 server=/chinajnhb.com/114.114.114.114
