accelerated-domains: add eastjl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28820,6 +28820,7 @@ server=/easthideschina.com/114.114.114.114
 server=/easthome.com/114.114.114.114
 server=/eastib.com/114.114.114.114
 server=/easticloud.com/114.114.114.114
+server=/eastjl.com/114.114.114.114
 server=/eastjq.com/114.114.114.114
 server=/eastled.com/114.114.114.114
 server=/eastlen.com/114.114.114.114
