--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50897,6 +50897,7 @@ server=/jljzzs.com/114.114.114.114
 server=/jlkgj.com/114.114.114.114
 server=/jlkj.cc/114.114.114.114
 server=/jlkja.com/114.114.114.114
+server=/jlkjgroup.com/114.114.114.114
 server=/jllihua.com/114.114.114.114
 server=/jlltxgbxyjy.com/114.114.114.114
 server=/jllyzxyy.com/114.114.114.114
