--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102859,6 +102859,7 @@ server=/zjmct.com/114.114.114.114
 server=/zjmetal.com/114.114.114.114
 server=/zjmi-mall.com/114.114.114.114
 server=/zjmichem.com/114.114.114.114
+server=/zjmif.com/114.114.114.114
 server=/zjminb.com/114.114.114.114
 server=/zjminghong.com/114.114.114.114
 server=/zjmingzhen.com/114.114.114.114
