accelerated-domains: add hts-auto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43724,6 +43724,7 @@ server=/htool.com/114.114.114.114
 server=/htper.com/114.114.114.114
 server=/htqyy.com/114.114.114.114
 server=/htranslate.com/114.114.114.114
+server=/hts-auto.com/114.114.114.114
 server=/htsamc.com/114.114.114.114
 server=/htsc.com/114.114.114.114
 server=/htsec.com/114.114.114.114
