accelerated-domains: add jianhuagroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49457,6 +49457,7 @@ server=/jiangzidushu.com/114.114.114.114
 server=/jiangzikanshu.com/114.114.114.114
 server=/jiangziyuedu.com/114.114.114.114
 server=/jianhaobao.com/114.114.114.114
+server=/jianhuagroup.com/114.114.114.114
 server=/jianhui.org/114.114.114.114
 server=/jianianle.com/114.114.114.114
 server=/jianjian.tv/114.114.114.114
