accelerated-domains: add splendecor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78794,6 +78794,7 @@ server=/spjxcn.com/114.114.114.114
 server=/splaybow.com/114.114.114.114
 server=/splayer.work/114.114.114.114
 server=/spldlkj.com/114.114.114.114
+server=/splendecor.com/114.114.114.114
 server=/splmcn.com/114.114.114.114
 server=/spmcn.com/114.114.114.114
 server=/spnchinaren.com/114.114.114.114
