accelerated-domains: add zjpci.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102888,6 +102888,7 @@ server=/zjoldns.com/114.114.114.114
 server=/zjorient.com/114.114.114.114
 server=/zjpark.com/114.114.114.114
 server=/zjpcedu.com/114.114.114.114
+server=/zjpci.com/114.114.114.114
 server=/zjpec.com/114.114.114.114
 server=/zjphrcb.com/114.114.114.114
 server=/zjpjmy.com/114.114.114.114
