--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5415,6 +5415,7 @@ server=/52fzwg.com/114.114.114.114
 server=/52gaoge.com/114.114.114.114
 server=/52gg.com/114.114.114.114
 server=/52ggd.com/114.114.114.114
+server=/52gongju.net/114.114.114.114
 server=/52grz.com/114.114.114.114
 server=/52guixi.com/114.114.114.114
 server=/52guzhuang.com/114.114.114.114
