accelerated-domains: add huanbearing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43943,6 +43943,7 @@ server=/huananzhi.com/114.114.114.114
 server=/huanbao.com/114.114.114.114
 server=/huanbao5.com/114.114.114.114
 server=/huanbaoscx.com/114.114.114.114
+server=/huanbearing.com/114.114.114.114
 server=/huanbeieloan.com/114.114.114.114
 server=/huanbeiloan.com/114.114.114.114
 server=/huancaicp.com/114.114.114.114
