accelerated-domains: add tianhonglaser.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82491,6 +82491,7 @@ server=/tianheplaza.com/114.114.114.114
 server=/tianhetech.com/114.114.114.114
 server=/tianhongchina.com/114.114.114.114
 server=/tianhongdiaosu.com/114.114.114.114
+server=/tianhonglaser.com/114.114.114.114
 server=/tianhongsunshine.com/114.114.114.114
 server=/tianhujy.com/114.114.114.114
 server=/tianiot.com/114.114.114.114
