--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87779,6 +87779,7 @@ server=/wbxinxi.com/114.114.114.114
 server=/wc-soft.com/114.114.114.114
 server=/wc0122log.com/114.114.114.114
 server=/wc44.com/114.114.114.114
+server=/wcansoft.com/114.114.114.114
 server=/wcaos.com/114.114.114.114
 server=/wcccc.cc/114.114.114.114
 server=/wcd.im/114.114.114.114
