--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91046,6 +91046,7 @@ server=/wzyestar.com/114.114.114.114
 server=/wzylrj.com/114.114.114.114
 server=/wzyzdyf.com/114.114.114.114
 server=/wzz1809.com/114.114.114.114
+server=/wzzbdz.com/114.114.114.114
 server=/wzzcd.com/114.114.114.114
 server=/wzzhchem.com/114.114.114.114
 server=/wzzlovesli.com/114.114.114.114
