--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102463,6 +102463,7 @@ server=/zilongame.com/114.114.114.114
 server=/zilongshanren.com/114.114.114.114
 server=/zilrms.com/114.114.114.114
 server=/ziluolanh.com/114.114.114.114
+server=/zimaa.org/114.114.114.114
 server=/zimacaihang.com/114.114.114.114
 server=/zimilan.com/114.114.114.114
 server=/zimingdh.com/114.114.114.114
