--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51963,6 +51963,7 @@ server=/juchuangfushi.com/114.114.114.114
 server=/jucool.com/114.114.114.114
 server=/jucqi.com/114.114.114.114
 server=/jucuiwangluo.com/114.114.114.114
+server=/judajia.com/114.114.114.114
 server=/judehahh.tech/114.114.114.114
 server=/judns.com/114.114.114.114
 server=/judong-1.com/114.114.114.114
