accelerated-domains: add zhengyaokeji.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101294,6 +101294,7 @@ server=/zhengxinghuahui.com/114.114.114.114
 server=/zhengxingzhijia.com/114.114.114.114
 server=/zhengxinonly.com/114.114.114.114
 server=/zhengyaing.win/114.114.114.114
+server=/zhengyaokeji.net/114.114.114.114
 server=/zhengyee.com/114.114.114.114
 server=/zhengyexing.com/114.114.114.114
 server=/zhengyounet.com/114.114.114.114
