accelerated-domains: add ikahe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46822,6 +46822,7 @@ server=/ijzhang.com/114.114.114.114
 server=/ik123.com/114.114.114.114
 server=/ik3cloud.com/114.114.114.114
 server=/ikafan.com/114.114.114.114
+server=/ikahe.com/114.114.114.114
 server=/ikaixun.com/114.114.114.114
 server=/ikaka.com/114.114.114.114
 server=/ikanchai.com/114.114.114.114
