accelerated-domains: add whale-king.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88807,6 +88807,7 @@ server=/wh702g.ren/114.114.114.114
 server=/whabl.net/114.114.114.114
 server=/whairport.com/114.114.114.114
 server=/whakll.com/114.114.114.114
+server=/whale-king.com/114.114.114.114
 server=/whale123.com/114.114.114.114
 server=/whalecloud.com/114.114.114.114
 server=/whalecloudexport.com/114.114.114.114
