--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39311,6 +39311,7 @@ server=/gztvu.com/114.114.114.114
 server=/gztwkadokawa.com/114.114.114.114
 server=/gztxcw.com/114.114.114.114
 server=/gztxedu.com/114.114.114.114
+server=/gztxfood.com/114.114.114.114
 server=/gztyre.com/114.114.114.114
 server=/gztyyedu.com/114.114.114.114
 server=/gztz.org/114.114.114.114
