accelerated-domains: add gdzygy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34041,6 +34041,7 @@ server=/gdzxgj.com/114.114.114.114
 server=/gdzxmm.com/114.114.114.114
 server=/gdzy5413.com/114.114.114.114
 server=/gdzygroup.com/114.114.114.114
+server=/gdzygy.com/114.114.114.114
 server=/gdzz114.com/114.114.114.114
 server=/gdzzz.com/114.114.114.114
 server=/ge-garden.net/114.114.114.114
