--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92973,6 +92973,7 @@ server=/xinjidian.com/114.114.114.114
 server=/xinjimo.com/114.114.114.114
 server=/xinjingst.com/114.114.114.114
 server=/xinjisuan.net/114.114.114.114
+server=/xinjixin.com/114.114.114.114
 server=/xinjiyuan.net/114.114.114.114
 server=/xinju.fun/114.114.114.114
 server=/xinjuc.com/114.114.114.114
