accelerated-domains: add chippacking.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20615,6 +20615,7 @@ server=/chiplayout.net/114.114.114.114
 server=/chipmanufacturing.org/114.114.114.114
 server=/chiponeic.com/114.114.114.114
 server=/chipown.com/114.114.114.114
+server=/chippacking.com/114.114.114.114
 server=/chipsbank.com/114.114.114.114
 server=/chipsec.com/114.114.114.114
 server=/chipsgo.com/114.114.114.114
