accelerated-domains: add gdwanshun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33994,6 +33994,7 @@ server=/gdunt.com/114.114.114.114
 server=/gdupi.com/114.114.114.114
 server=/gdutbbs.com/114.114.114.114
 server=/gdvolunteer.net/114.114.114.114
+server=/gdwanshun.com/114.114.114.114
 server=/gdwbyq.com/114.114.114.114
 server=/gdwca.com/114.114.114.114
 server=/gdwdtz.com/114.114.114.114
