--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34022,6 +34022,7 @@ server=/gdygsk.com/114.114.114.114
 server=/gdyilianwang.com/114.114.114.114
 server=/gdyjs.com/114.114.114.114
 server=/gdylhp.com/114.114.114.114
+server=/gdyngl.com/114.114.114.114
 server=/gdysnk.com/114.114.114.114
 server=/gdyuhi.com/114.114.114.114
 server=/gdyunxiao.com/114.114.114.114
